fix: 공지사항 로직 개선