@@ -35,12 +35,14 @@ import java.util.stream.Collectors;
 public class AdminNoticeService {
 
     private static final int FILE_LIMIT = 5; // 최대 업로드 가능한 파일 수
-    private static final String S3_NOTICE_PHOTO_DIR = "noticePhoto/"; // 공지사항 사진 경로
+    private static final String S3_NOTICE_PHOTO_DIR = "noticePhoto/";
     private final NoticeRepository noticeRepository;
     private final NoticePhotoRepository noticePhotoRepository;
     private final S3FileUploadService s3FileUploadService;
 
-    // 공지사항 리스트 조회 (페이징)
+    /**
+     * 공지사항 리스트 조회 (페이징)
+     */
     @Transactional(readOnly = true)
     public AdminNoticePageListResponse getNotices(Pageable pageable) {
         Page<Notice> notices = noticeRepository.findAll(pageable);
@@ -64,10 +66,11 @@ public class AdminNoticeService {
                 .build();
     }
 
-    // 공지사항 조회
+    /**
+     * 공지사항 조회
+     */
     @Transactional(readOnly = true)
     public NoticeDetailResponse getNoticeByUUID(UUID noticeUUID) {
-
         Notice notice = noticeRepository.findByNoticeUUID(noticeUUID)
                 .orElseThrow(() -> {
                     log.warn("공지사항 조회 실패 - 존재하지 않는 UUID: {}", noticeUUID);
@@ -91,7 +94,9 @@ public class AdminNoticeService {
         );
     }
 
-    // 공지사항 생성
+    /**
+     * 공지사항 생성
+     */
     public List<String> createNotice(AdminNoticeCreationRequest request, List<MultipartFile> noticePhotos) {
         Admin admin = getAuthenticatedAdmin();
 
@@ -113,7 +118,9 @@ public class AdminNoticeService {
         return presignedUrls;
     }
 
-    // 공지사항 수정
+    /**
+     * 공지사항 수정
+     */
     public List<String> updateNotice(UUID noticeUUID, AdminNoticeUpdateRequest request, List<MultipartFile> noticePhotos) {
 
         // 공지사항 조회
@@ -139,7 +146,9 @@ public class AdminNoticeService {
         return presignedUrls;
     }
 
-    // 공지사항 삭제
+    /**
+     * 공지사항 삭제
+     */
     public void deleteNotice(UUID noticeUUID) {
 
         Notice notice = noticeRepository.findByNoticeUUID(noticeUUID)
@@ -177,62 +186,53 @@ public class AdminNoticeService {
         }
     }
 
-    // 기존 사진 삭제
+    // 기존 사진 일괄 삭제
     private void deleteExistingPhotos(Notice notice) {
         List<NoticePhoto> existingPhotos = noticePhotoRepository.findByNotice(notice);
+        if (existingPhotos.isEmpty()) return;
 
-        if (existingPhotos.isEmpty()) {
-            log.debug("공지사항 사진 삭제 없음 - ID: {}", notice.getNoticeId());
-            return;
-        }
-
-        // 삭제할 파일 이름 목록 추출
         List<String> fileNames = existingPhotos.stream()
                 .map(NoticePhoto::getNoticePhotoS3Key)
-                .collect(Collectors.toList());
+                .toList();
 
-        // S3에서 파일 일괄 삭제
         s3FileUploadService.deleteFiles(fileNames);
-
-        // DB에서 사진 정보 일괄 삭제
-        noticePhotoRepository.deleteAll(existingPhotos);
+        noticePhotoRepository.deleteAllInBatch(existingPhotos);
 
         log.debug("공지사항 사진 일괄 삭제 완료 - ID: {}, 삭제된 파일 수: {}", notice.getNoticeId(), fileNames.size());
     }
 
-    // 사진 처리 로직
+    // 사진 업로드
     private List<String> handleNoticePhotos(Notice notice, List<MultipartFile> noticePhotos, List<Integer> photoOrders) {
+        if (noticePhotos == null || noticePhotos.isEmpty()) return List.of();
+
+        List<NoticePhoto> newPhotoList = new ArrayList<>();
         List<String> presignedUrls = new ArrayList<>();
 
-        if (noticePhotos != null && !noticePhotos.isEmpty()) {
-            // 사진이 존재할 경우에만 처리
-            for (int i = 0; i < noticePhotos.size(); i++) {
-                MultipartFile noticePhoto = noticePhotos.get(i);
-                int order = photoOrders.get(i);
+        for (int i = 0; i < noticePhotos.size(); i++) {
+            MultipartFile noticePhoto = noticePhotos.get(i);
+            int order = photoOrders.get(i);
 
-                if (noticePhoto == null || noticePhoto.isEmpty()) {
-                    log.warn("공지사항 사진 업로드 실패 - 빈 파일 포함됨, 순서: {}", order);
-                    continue;
-                }
-
-                NoticePhoto newPhoto = new NoticePhoto();
-                newPhoto.setNotice(notice);
-                newPhoto.setOrder(order);
-
-                S3FileResponse s3FileResponse = updateNoticePhotoAndS3File(noticePhoto, newPhoto, order);
-                presignedUrls.add(s3FileResponse.getPresignedUrl());
+            if (noticePhoto == null || noticePhoto.isEmpty()) {
+                log.warn("공지사항 사진 업로드 실패 - 빈 파일 포함됨, 순서: {}", order);
+                continue;
             }
+
+            S3FileResponse s3FileResponse = s3FileUploadService.uploadFile(noticePhoto, S3_NOTICE_PHOTO_DIR);
+
+            NoticePhoto newPhoto = NoticePhoto.builder()
+                    .notice(notice)
+                    .noticePhotoName(noticePhoto.getOriginalFilename())
+                    .noticePhotoS3Key(s3FileResponse.getS3FileName())
+                    .order(order)
+                    .build();
+
+            newPhotoList.add(newPhoto);
+            presignedUrls.add(s3FileResponse.getPresignedUrl());
         }
 
-        return presignedUrls;
-    }
+        noticePhotoRepository.saveAll(newPhotoList);
 
-    // S3 파일 업로드 및 NoticePhoto 업데이트
-    private S3FileResponse updateNoticePhotoAndS3File(MultipartFile noticePhoto, NoticePhoto newPhoto, int order) {
-        S3FileResponse s3FileResponse = s3FileUploadService.uploadFile(noticePhoto, S3_NOTICE_PHOTO_DIR);
-        newPhoto.updateNoticePhoto(noticePhoto.getOriginalFilename(), s3FileResponse.getS3FileName(), order);
-        noticePhotoRepository.save(newPhoto);
-        log.debug("공지사항 사진 업로드 완료 - 파일명: {}, S3Key: {}", noticePhoto.getOriginalFilename(), s3FileResponse.getS3FileName());
-        return s3FileResponse;
+        log.debug("공지사항 사진 일괄 업로드 완료 - 총 {}개", newPhotoList.size());
+        return presignedUrls;
     }
 }
